# django_keycloak_auth

./: README.md
base/: example.env  pyproject.toml
base/auth_keycloak/: apps.py  authentication.py  helpers.py  keycloak.py  urls.py  utils.py  validation.py  views.py
base/base/: settings.py  urls.py
base/certs/: README.md  jwt-private.pem  jwt-public.pem
base/task/: admin.py  models.py  serializers.py  urls.py  views.py
base/task/migrations/: 0001_initial.py
